# openpaw-js

./: package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: CODE_GENERATION_DESIGN.md  GENERAL_PRIMITIVES_DESIGN.md  MULTI_AGENT_COLLABORATION.md
public/: sw.js
public/skills/: desktop_screen.md  desktop_uia.md  office_doc.md  phone_screen.md
python-engine/: main.py  protocol.py  requirements.txt
python-engine/engine/: __init__.py  browser.py  desktop_uia.py  global_listener.py  ocr.py  screenshot.py
src/: main.tsx  router.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: app.rs  app_index.rs  bridge.rs  capture.rs  file_util.rs  gdi_utils.rs  global_listener.rs  image_process.rs  input.rs  mod.rs  screenshot.rs  window.rs
src/adapters/: anthropic.ts  dom-adapter.ts  index.ts  model-call-service.ts  openai.ts  platform-adapter.ts  types.ts  uia-adapter.ts
src/agents/: chat-api.ts  code-generation-api.ts  index.ts  intent-classifier-api.ts  screen-analysis-api.ts  ui-vision-api.ts  verification-api.ts
src/api/: client.ts  index.ts  types.ts
src/app/: layout.tsx  page.tsx
src/backend/: handlers.ts  index.ts  llm-executor.ts  middleware.ts  vite-plugin.ts
src/components/: app-init-wrapper.tsx  app-shell.tsx  bbox-overlay.tsx  float-window-toggle.tsx  model-config-form.tsx  region-selector.tsx  watcher-dialog.tsx
src/config/: system-prompts.json
src/core/: skill-learner.ts  skill-resolver.ts
src/db/: index.ts  types.ts  wasm.ts
(+165 files in other folders)
