[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["macros"] }
tauri = { version = "2.11.1", features = [ "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.3.5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png"] }
winreg = "0.55"
clipboard-win = "5"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Registry",
  "Win32_System_Com",
  "Win32_UI_Shell",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_ToolHelp",
] }
